@@ -23,6 +23,7 @@ Fernando Lopez-Lezcano
 2008-03-28 Stephane Letz  <letz@grame.fr>
 		
 	* Correct PortRegister, port name checking must be done on server side.
+	* Add an Init method for blocking drivers to be decorated using JackThreadedDriver class.
 
 2008-03-27 Stephane Letz  <letz@grame.fr>
 		
